// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductLineItem /> Rendering should render the product details 1`] = `
<div>
  <div
    class="row align-items-center mb-3 product-wrapper"
  >
    <div
      class="col-5"
    >
      <div
        class="embed-responsive embed-responsive-16by9"
      >
        <img
          alt=""
          class="img-thumbnail product-thumbnail"
          src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
        />
      </div>
    </div>
    <div
      class="col-7"
    >
      <h6
        aria-level="3"
        class="m-0"
      >
        Introduction to Happiness
      </h6>
      <p
        class="m-0"
      >
        Verified Certificate
      </p>
    </div>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for audit certificate 1`] = `
<div>
  <div
    class="row align-items-center mb-3 product-wrapper"
  >
    <div
      class="col-5"
    >
      <div
        class="embed-responsive embed-responsive-16by9"
      >
        <img
          alt=""
          class="img-thumbnail product-thumbnail"
          src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
        />
      </div>
    </div>
    <div
      class="col-7"
    >
      <h6
        aria-level="3"
        class="m-0"
      >
        Introduction to Happiness
      </h6>
      <p
        class="m-0"
      />
    </div>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for honor certificate 1`] = `
<div>
  <div
    class="row align-items-center mb-3 product-wrapper"
  >
    <div
      class="col-5"
    >
      <div
        class="embed-responsive embed-responsive-16by9"
      >
        <img
          alt=""
          class="img-thumbnail product-thumbnail"
          src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
        />
      </div>
    </div>
    <div
      class="col-7"
    >
      <h6
        aria-level="3"
        class="m-0"
      >
        Introduction to Happiness
      </h6>
      <p
        class="m-0"
      />
    </div>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for no-id-professional certificate 1`] = `
<div>
  <div
    class="row align-items-center mb-3 product-wrapper"
  >
    <div
      class="col-5"
    >
      <div
        class="embed-responsive embed-responsive-16by9"
      >
        <img
          alt=""
          class="img-thumbnail product-thumbnail"
          src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
        />
      </div>
    </div>
    <div
      class="col-7"
    >
      <h6
        aria-level="3"
        class="m-0"
      >
        Introduction to Happiness
      </h6>
      <p
        class="m-0"
      >
        Professional Certificate
      </p>
    </div>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for professional certificate 1`] = `
<div>
  <div
    class="row align-items-center mb-3 product-wrapper"
  >
    <div
      class="col-5"
    >
      <div
        class="embed-responsive embed-responsive-16by9"
      >
        <img
          alt=""
          class="img-thumbnail product-thumbnail"
          src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
        />
      </div>
    </div>
    <div
      class="col-7"
    >
      <h6
        aria-level="3"
        class="m-0"
      >
        Introduction to Happiness
      </h6>
      <p
        class="m-0"
      >
        Professional Certificate
      </p>
    </div>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for unknown seat type 1`] = `
<div>
  <div
    class="row align-items-center mb-3 product-wrapper"
  >
    <div
      class="col-5"
    >
      <div
        class="embed-responsive embed-responsive-16by9"
      >
        <img
          alt=""
          class="img-thumbnail product-thumbnail"
          src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
        />
      </div>
    </div>
    <div
      class="col-7"
    >
      <h6
        aria-level="3"
        class="m-0"
      >
        Introduction to Happiness
      </h6>
      <p
        class="m-0"
      />
    </div>
  </div>
</div>
`;

exports[`<ProductLineItem /> Rendering should render the product details for verified certificate 1`] = `
<div>
  <div
    class="row align-items-center mb-3 product-wrapper"
  >
    <div
      class="col-5"
    >
      <div
        class="embed-responsive embed-responsive-16by9"
      >
        <img
          alt=""
          class="img-thumbnail product-thumbnail"
          src="https://prod-discovery.edx-cdn.org/media/course/image/21be6203-b140-422c-9233-a1dc278d7266-941abf27df4d.small.jpg"
        />
      </div>
    </div>
    <div
      class="col-7"
    >
      <h6
        aria-level="3"
        class="m-0"
      >
        Introduction to Happiness
      </h6>
      <p
        class="m-0"
      >
        Verified Certificate
      </p>
    </div>
  </div>
</div>
`;
